v0.9.1 - Pending
	+ Screenshot support
	+ Bug: Fix freeze involving modified image and navigation
	+ Bug: Prevent possible crash on invalid image files
	+ Bug: Fix occassional wrong height of thumbnails (and gobject assertion)
	+ Bug: Wrong image displayed if discarding modified app and using preload
	+ Bug: Ctrl+mousewheel doesn't zoom when caps/num lock is on
	+ Bug: Fix horizontal centering of image
	+ Bug: Fix .desktop file category

v0.9 - October 18, 2007
	+ Thumbnails pane (freedesktop spec compliant using ~/.thumbnails)
	+ Ability to open remote images (http and ftp)
	+ Register viewed images with gtk's recent documents (ongardie)
	+ Preference for opening hidden files
	+ Add up/down keybindings to go to previous/next image
	+ Bug: Filenames in custom actions aren't correctly escaped (Andrew)
	+ Bug: Can't open properties on animated images
	+ Bug: Editing a custom action creates a new action
	+ Bug: Fast image traversal overruns image list and becomes stuck

v0.8.3 - January 17, 2007
	+ Use F11 for fullscreen like most applications
	+ Use 'kfmclient' to launch browser in kde
	+ Added Italian translation (Daniele Maggio)
	+ Bug: Save As doesn't work

v0.8.2 - December 7, 2006
	+ Ability to modify image saturation
	+ Recent file/list menu
	+ Save/load accel_map in case user edits any gtk accelerators
	+ Bug: Fullscreen controls can be on wrong screen with Xinerama
	+ Bug: Scrollbars don't appear correctly on window resizes
	+ Bug: Panning images doesn't always work properly
	+ Bug: Alpha channel is lost when resizing image with transparency
	+ Bug: Allow saving files when file extension isn't lowercase
	+ Bug: Specified image scaling method isn't properly used

v0.8.1 - October 19, 2006
	+ Add list of image names to custom actions (%L)
	+ Improved preloading/navigation handling
	+ Menu improvements; added Custom Actions to EditMenu
	+ Try gnome-open/exo-open first for opening help, then fallback
	+ Bug: Next/brevious buttons block with mouse over it